fixed alignment

--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,3 @@
-head {
- font-size: 300%;
+foot {
+align: middle;
 }
-
-iframe {
- margin: auto;
- width: 50%;
-}
-
-img {
-float: left;
-}
-
